--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "imgliquid": "^0.9.944",
     "jquery": "^3.5.1",
     "nuxt": "^2.13.0",
     "nuxt-i18n": "^6.13.1",
