--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.6",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "imgliquid": "^0.9.944",
     "jquery": "^3.5.1",
+    "jquery.marquee": "^1.5.0",
     "nuxt": "^2.13.0",
     "nuxt-i18n": "^6.13.1",
     "popper.js": "^1.16.1",
+    "swiper": "^6.0.4",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-i18n": "^8.18.2",
+    "vue-marquee-text-component": "^1.1.1",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
