--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@vue/composition-api": "^1.0.0-beta.6",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
-    "imgliquid": "^0.9.944",
     "jquery": "^3.5.1",
     "jquery.marquee": "^1.5.0",
     "nuxt": "^2.13.0",
@@ -31,6 +30,7 @@
     "pug": "^3.0.0",
     "pug-html-loader": "^1.1.5",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^9.0.2"
+    "sass-loader": "^9.0.2",
+    "svg-sprite-loader": "^5.0.0"
   }
 }
