--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt-i18n": "^6.13.1",
     "popper.js": "^1.16.1",
     "swiper": "^6.0.4",
+    "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-i18n": "^8.18.2",
     "vue-marquee-text-component": "^1.1.1",
